--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router": "^7.6.1",
     "react-toastify": "^11.0.5",
     "sweetalert": "^2.1.2",
