--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.7",
+    "@tanstack/react-query": "^5.90.5",
     "axios": "^1.10.0",
     "firebase": "^11.8.1",
     "framer-motion": "^12.23.12",
